--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     },
     "homepage": "https://github.com/sushilt553/shopOn#readme",
     "dependencies": {
+        "aws-sdk": "^2.642.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "concurrently": "^5.1.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.4",
+        "multer": "^1.4.2",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "validator": "^12.2.0"
